--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -13,16 +13,16 @@ on:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
-    if: github.repository == 'hillexed/glolf'
+    if: github.repository == 'hillexed/mechgacha'
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Push Glolf to Docker Hub
+      - name: Push mechgacha to Docker Hub
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           path: ./
-          repository: hillexed/glolf
+          repository: hillexed/mechgacha
           tags: latest
