--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -16,13 +16,18 @@ jobs:
     if: github.repository == 'hillexed/mechgacha'
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Push mechgacha to Docker Hub
-        uses: docker/build-push-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          path: ./
-          repository: hillexed/mechgacha
-          tags: latest
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: hillexed/mechgacha:latest
