--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,11 @@ services:
       - WATCHTOWER_CLEANUP=true
       - WATCHTOWER_INCLUDE_STOPPED=true
       - WATCHTOWER_REVIVE_STOPPED=true
-      - WATCHTOWER_SCHEDULE=* */5 * * *
+      - WATCHTOWER_SCHEDULE=0 */5 * * *
       # - WATCHTOWER_NOTIFICATIONS=shoutrrr
       # - WATCHTOWER_NOTIFICATION_URL=discord://TOKEN@WEBHOOKID
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: mechgacha
     network_mode: host
     restart: unless-stopped
 
